--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -8,5 +8,10 @@
   },
   "ConnectionStrings": {
     "SqlServer": "Data Source=.;Initial Catalog=HosardeDB;Integrated Security=True;"
+  },
+  "DeliveryCost": {
+    "NeshanApiKey": "service.b8f219c3cd994483802841e2f961beb3",
+    "EachKMeterCost": "4000",
+    "EachMinutesCost": "1200"
   }
 }
