--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -11,7 +11,11 @@
   },
   "DeliveryCost": {
     "NeshanApiKey": "service.b8f219c3cd994483802841e2f961beb3",
+    "NeshanType": "Car",
     "EachKMeterCost": "4000",
-    "EachMinutesCost": "1200"
+    "EachMinutesCost": "1200",
+    "OriginLat": "35.725898641527046",
+    "OriginLng": "51.34160041809083",
+    "MinimumDeliveryPrice": "30000"
   }
 }
