--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -14,8 +14,11 @@
     "NeshanType": "Car",
     "EachKMeterCost": "4000",
     "EachMinutesCost": "1200",
-    "OriginLat": "35.725898641527046",
-    "OriginLng": "51.34160041809083",
-    "MinimumDeliveryPrice": "30000"
+    "OriginLat": "35.69599201166759",
+    "OriginLng": "51.4809250831604",
+    "MinimumDeliveryPrice": "30000",
+    "PostCost": "35000",
+    "DeliveryTimePostDays": "3",
+    "DeliveryTimeExpressHours": "30"
   }
 }
