--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,6 @@ MigrationBackup/
 FodyWeavers.xsd
 /UI/wwwroot/Images/Products/pzqecdr0.png
 /UI/wwwroot/Images/Products
+/UI/log-20231115.txt
+/UI/log-20231219.txt
+/UI/log-20231220.txt
