--- a/UI/appsettings.json
+++ b/UI/appsettings.json
@@ -6,5 +6,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlServer": "Data Source=.;Initial Catalog=HosardeDB;Integrated Security=True;"
+  },
+  "DeliveryCost": {
+    "NeshanApiKey": "service.b8f219c3cd994483802841e2f961beb3",
+    "NeshanType": "Car",
+    "EachKMeterCost": "4000",
+    "EachMinutesCost": "1200",
+    "OriginLat": "35.69599201166759",
+    "OriginLng": "51.4809250831604",
+    "MinimumDeliveryPrice": "30000",
+    "PostCost": "35000",
+    "DeliveryTimePostDays": "3",
+    "DeliveryTimeExpressHours": "30"
+  }
 }
