--- a/UI/appsettings.Development.json
+++ b/UI/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SqlServer": "Data Source=.;Initial Catalog=HosardeDB;Integrated Security=True;"
+    "SqlServer": "Data Source=DESKTOP-7BAQLVC\\SQLEXPRESS;Initial Catalog=HosardeDB;Integrated Security=True;TrustServerCertificate=True"
   },
   "DeliveryCost": {
     "NeshanApiKey": "service.b8f219c3cd994483802841e2f961beb3",
